# substack-link-checker

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  USAGE.md  compare_posts.py  demo_link_checker.py  fetch_archive_urls.py  import_checked_posts.py  post_urls_2020.txt  pyproject.toml  requirements.txt  run_link_checker.ps1  substack_link_checker.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
src/substack_link_checker/: __init__.py  __main__.py  _cli_check.py  checker.py  cli.py  compare.py  demo.py  fetch_archive.py  import_history.py
tests/: conftest.py  test_cli_dispatch.py  test_cookie_handling.py
